# pyiku

./: README.md  pyproject.toml
pyiku/: __init__.py  config.py  pyiku.py
tests/: test.py
