[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyiku"
version = "1.3"
description = "A Python library for detecting haiku(s)"
authors = [{ name="Blaise Wynne", email="blaise.wynne@gmail.com" }]
maintainers = [{ name="Blaise Wynne", email="blaise.wynne@gmail.com" }]
license = "GPL-3.0+"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Artistic Software"
]

[project.urls]
"Homepage" = "https://github.com/blaisewynne/pyiku"
"Bug Tracker" = "https://github.com/blaisewynne/pyiku/issues"
"Source Code" = "https://github.com/blaisewynne/pyiku"

[tool.setuptools]
packages = ["pyiku"]